Move to java8 LocalDateTime a bit, some formatting.